Use framer motion to add fade-in and slide-in  scroll animations

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/intl": "^1.2.2",
+    "framer-motion": "^11.0.8",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "next": "14.1.0",
