--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@motionone/utils": "^10.17.0",
     "@types/intl": "^1.2.2",
     "framer-motion": "^11.0.8",
     "fs": "^0.0.1-security",
