--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@motionone/utils": "^10.17.0",
     "@types/intl": "^1.2.2",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "framer-motion": "^11.0.8",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
