--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@motionone/utils": "^10.17.0",
     "@types/intl": "^1.2.2",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/postgres": "^0.9.0",
     "@vercel/speed-insights": "^1.0.10",
     "framer-motion": "^11.0.8",
     "fs": "^0.0.1-security",
@@ -22,7 +23,8 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "vercel": "^35.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
